--- a/src/Components/project.json
+++ b/src/Components/project.json
@@ -2,14 +2,21 @@
 [
     {
         "id":"1",
-        "title":"Payment Project",
-        "img":"./Assets/paymentimage.jpg",
-        "github":"https://github.com/Aadarsh-Raj/payment-project",
-        "link":"https://aadarsh-raj.github.io/payment-project/index.html"
+        "title":"Studynotion",
+        "img":"./Assets/studynotion.jpg",
+        "github":"https://github.com/Aadarsh-Raj/Studynotion-frontend",
+        "link":"https://main--arya-studynotion.netlify.app/"
 
     },
     {
         "id":"2",
+        "title":"Codepen",
+        "img":"./Assets/codepen.jpg",
+        "github":"https://github.com/Aadarsh-Raj/codepen-clone",
+        "link":"https://main--arya-codepen.netlify.app/"
+    },
+    {
+        "id":"3",
         "title":"Sticky Notes",
         "img":"./Assets/notesimage.jpg",
         "github":"https://github.com/Aadarsh-Raj/sticky-notes",
@@ -17,19 +24,11 @@
 
     },
     {
-        "id":"3",
+        "id":"4",
         "title":"Crypto Page",
         "img":"./Assets/cryptoimage.jpg",
         "github":"https://github.com/Aadarsh-Raj/cryptoPage",
         "link":"https://aadarsh-raj.github.io/cryptoPage/index.html"
-
-    },
-    {
-        "id":"4",
-        "title":"Password Generator",
-        "img":"./Assets/passwordimage.jpg",
-        "github":"https://github.com/Aadarsh-Raj/password-generator",
-        "link":"https://main--cute-sprite-ee5be8.netlify.app/"
 
     }
 ]
